--- a/source/stylesheets/_helper/helper-functions.scss
+++ b/source/stylesheets/_helper/helper-functions.scss
@@ -3,3 +3,34 @@
 	::
 	::	Define global helper functions
 	----------------------------------------------------------------------------- */
+
+@function multiply-grid-percent($percent, $percent-outer){
+  @return $percent - ($percent * $percent-outer);
+}
+
+@function generate-url($img){
+  @return url("#{$imageRoot}#{$img}");
+}
+
+/*  -----------------------------------------------------------------------------
+  ::  COLOR
+  ----------------------------------------------------------------------------- */
+
+@function calcTint($percentage){
+  $alpha: $percentage / 100;
+  @return hsla(0,0,100,$alpha);
+}
+
+@function white($lightness){
+  @return hsla(0,0, $lightness, 1);
+}
+
+@function calcShade($percentage){
+  $alpha: $percentage / 100;
+  @return hsla(0,0,0,$alpha);
+}
+
+@function black($percentage){
+  $lightness: 100 - $percentage;
+  @return hsla(0,0, $lightness, 1);
+}
