--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -5,23 +5,20 @@ html
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     meta name="description" content=page_description
-    meta name="viewport" content="width=device-width"
-    ==stylesheet_link_tag "app"
+    meta name="viewport" content="width=device-width, minimum-scale=1.0, maximim-scale=1.0"
+
+    // Typography.com fonts
+    == stylesheet_link_tag "//cloud.typography.com/6507252/707822/css/fonts.css"
+    // Concatenated stylesheet
+    == stylesheet_link_tag "app"
   body
-    h1 HELLO WORLD
-    == yield
+    main#main role="main"
+      == yield
 
     //Load JQ after page content
-    ==javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
+    == javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     javascript:
-      window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.9.1.min.js"><\/script>')
+      window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.10.2.min.js"><\/script>')
 
-    //Load site JS
-    ==javascript_include_tag "site"
-
-    //Google Analytics
-    javascript:
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g,s)}(document,'script'));
+    // Concatenated JS
+    == javascript_include_tag "app"
