D3 and NVD3 loaded

--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -1,11 +1,12 @@
 //Resets
-@import "_vendor/normalize.css";
-@import "_vendor/html5bp.css";
+// @import "_vendor/normalize.css";
+@import "_vendor/html5bp";
 
 //Frameworks
+@import "_vendor/nvd3";
 
 //Global Helpers
-@import "_helper/helper-classes";
+// @import "_helper/helper-classes";
 @import "_helper/helper-functions";
 @import "_helper/helper-mixins";
 
