--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -5,7 +5,7 @@ html
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     meta name="description" content=page_description
-    meta name="viewport" content="width=device-width, minimum-scale=1.0, maximim-scale=1.0"
+    meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"
 
     // Typography.com fonts
     == stylesheet_link_tag "//cloud.typography.com/6507252/707822/css/fonts.css"
