--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -4,6 +4,9 @@
 
 //Frameworks
 @import "_vendor/nvd3";
+// @import "compass/utilities/general/hacks";
+// @import "compass/css3/shared";
+@import "compass";
 
 //Global Helpers
 // @import "_helper/helper-classes";
