Added legend, not responsive

--- a/source/stylesheets/app.css.scss
+++ b/source/stylesheets/app.css.scss
@@ -7,6 +7,7 @@
 // @import "compass/utilities/general/hacks";
 // @import "compass/css3/shared";
 @import "compass";
+@import "modular-scale";
 
 //Global Helpers
 // @import "_helper/helper-classes";
