--- a/source/stylesheets/_module/module-foo.scss
+++ b/source/stylesheets/_module/module-foo.scss
@@ -13,48 +13,77 @@
   margin: 0 auto;
 }
 
-#chart{
+#vis{
   // height: 20rem;
 
-  border: 1px solid calcShade(15);
+  $border: 1px solid calcShade(17);
+
+  border: $border;
   background: white;
+  font-family: $sans-serif;
 
-  svg{
-    // width: auto; 
-  }
 
-  h5{
+  .title{
     margin: 0;
     padding: .5rem;
-    border-bottom: 1px solid calcShade(20);
+    border-bottom: $border;
     font-weight: 500;
     color: black;
     @include background-image(linear-gradient(calcShade(4), calcShade(6)));
   }
 
-  .axis{
-    text{
-      fill: calcShade(65);
-      font-size: .7em;
-      font-family: $sans-serif;
-      text-anchor: start;
-    }
-    path, line{
-      fill: none;
-      stroke: calcShade(20);
-      shape-rendering: crispEdges;
-    }
-    &.y{
-      // Hide 0 Label
-      > g:first-child text{
-        display: none;
+  .legend{
+    font-size: $ms--1;
+    list-style-type: none;
+    margin: 0;
+    li{
+      margin: 0;
+      display: inline;
+      margin: .5rem;
+      > span{
+        line-height: 2.5rem;
+      }
+      .circle{
+        $radius: .5rem;
+        display: inline-block;
+        border-radius: 50%;
+        height: $radius;
+        width: $radius;
+        margin-right: .3rem;
+        position: relative;
+        bottom: .03rem;
+      }
+      .text{
+        display: inline;
       }
     }
-    > path{
-    display: none;
-    }
   }
-  .series path{
-    opacity: .7;
+
+  .chart{
+    .axis{
+      text{
+        fill: calcShade(69);
+        font-size: .7em;
+        font-family: $sans-serif;
+        text-anchor: start;
+      }
+      path, line{
+        fill: none;
+        stroke: calcShade(13);
+        shape-rendering: crispEdges;
+      }
+      &.y{
+        // Hide 0 Label
+        > g:first-child text{
+          display: none;
+        }
+      }
+      > path{
+      display: none;
+      }
+    }
+    .series path{
+      opacity: .7;
+    }
   }
 }
