--- a/source/stylesheets/_module/module-foo.scss
+++ b/source/stylesheets/_module/module-foo.scss
@@ -36,14 +36,16 @@
     font-size: $ms--1;
     list-style-type: none;
     margin: 0;
+    margin-top: .6rem;
     li{
       margin: 0;
-      display: inline;
-      margin: .5rem;
+      margin: .125rem .5rem;
+      white-space: nowrap;
+      float: left;
       > span{
-        line-height: 2.5rem;
+        // line-height: 2.5rem;
       }
-      .circle{
+      .circle{ // Hacky. this should be svg circle.
         $radius: .5rem;
         display: inline-block;
         border-radius: 50%;
@@ -68,6 +70,7 @@
         text-anchor: start;
       }
       path, line{
+        vector-effect: non-scaling-stroke;
         fill: none;
         stroke: calcShade(13);
         shape-rendering: crispEdges;
